# small-cot-experiments

./: .gitignore  AICS_SLURM_QUICKSTART.md  README.md  bench.py  configurator.py  experiment_log.md  hf_checkpoint.py  modadd_experiment_log.md  model.py  nanogpt_checkpoint.py  new_experiment_log.md  new_modadd_experiment_log.md  pyproject.toml  run_s5_noisy_bc_full_dist_eta.sh  run_s5_noisy_bc_mc_eta.sh  run_s5_opd_eta.sh  s5_experiment_log.md  sample.py  torch_dtypes.py  train.py  train_TM_opd.py  train_opd.py  train_opd_hf.py
analysis/: __init__.py  s5_runs.py
config/: train_modadd_base_p7_m30.py  train_modadd_clean_offline_bc.py  train_modadd_cot_p7_m21.py  train_modadd_noisy_bc.py  train_s5_base_len21.py  train_s5_clean_offline_bc.py  train_s5_cot_len21.py  train_s5_noisy_bc.py
debugging-log/: modadd_p7_m127_opd_audit.md  modadd_p7_m127_opd_audit_runs.csv  modadd_p7_m127_opd_audit_summary.json  s5_noisy_bc_debug_summary.md  s5_opd_hf_backend_summary.md
docs/: methods.md
exports/: s5_online_seed_sweeps_aics.tgz
hydra_configs/: config.yaml
nanogpt/: __init__.py
notebooks/: modadd_p7_m127_eval_curves.ipynb  modadd_p7_m31_opd_rollout_eval_curves.ipynb  s5_low_noise_mc_comparison.ipynb  s5_offline_bc_vs_nail_opd_mc_eval_curves.ipynb  s5_online_methods_seed_sweeps.ipynb
out-s5-clean-offline-smoke-prefix/: completed.txt
out-s5-clean-offline-smoke-resume/: completed.txt
out-s5-clean-offline-smoke2/: completed.txt
scripts/: aggregate_modadd_results.py  aics_gpu_smoke_test.sh  aics_slurm_discovery.sh  aics_submit_s5_noisy_bc_eta.sh  plot_style.py  (+32 more)
(+179 files in other folders)
