[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanogpt-hydra"
version = "0.1.0"
description = "Hydra-first experiment launcher for this nanoGPT research repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3,<1.4",
  "hydra-submitit-launcher>=1.2,<1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
